force-app/main/default/objects/UsageSummary/fields/LiableSummaryId__c.field-meta.xml
<CustomField>
    <fullName>LiableSummaryId__c</fullName>
    <label>LiableSummaryId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>