force-app/main/default/objects/UsageSummary/fields/LiableSummaryIdName__c.field-meta.xml
<CustomField>
    <fullName>LiableSummaryIdName__c</fullName>
    <label>LiableSummaryIdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>