force-app/main/default/objects/UsageSummary/fields/UEAId__c.field-meta.xml
<CustomField>
    <fullName>UEAId__c</fullName>
    <label>UEAId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>