force-app/main/default/objects/UsageSummary/fields/UEAIdName__c.field-meta.xml
<CustomField>
    <fullName>UEAIdName__c</fullName>
    <label>UEAIdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>