force-app/main/default/objects/UsageSummary/fields/UoMIdName__c.field-meta.xml
<CustomField>
    <fullName>UoMIdName__c</fullName>
    <label>UoMIdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>