force-app/main/default/objects/UsageSummary/fields/UsageResourceId__c.field-meta.xml
<CustomField>
    <fullName>UsageResourceId__c</fullName>
    <label>UsageResourceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>