force-app/main/default/objects/UsageSummary/fields/UsageResourceIdName__c.field-meta.xml
<CustomField>
    <fullName>UsageResourceIdName__c</fullName>
    <label>UsageResourceIdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>